grid: fix align-items

--- a/webapp/src/components/Grid/style.css
+++ b/webapp/src/components/Grid/style.css
@@ -7,6 +7,11 @@
   box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
+  align-items: start;
+}
+
+.stretch,
+.stretch > .col {
   align-items: stretch;
 }
 
